fix floats and alignment in zone and footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -67,6 +67,7 @@
 
 .container {
     float: left;
+    width: 100%;
 }
 
 .main-zone {
@@ -863,6 +864,7 @@ textarea {
 
 .bk-footer {
     float: left;
+    width: 100%;
     .footer-one, .footer-two {
         float: left;
         width: 100%;
